--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -20,6 +20,7 @@
 "Update.app" = "Update App";
 "Submit.success" = "Submit Successful";
 "Submit.cancel" = "Cancel";
+"Close"="close";
 
 /* Login */
 "create.account" = "Create Account";
