--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -49,13 +49,13 @@
 "mnemonic.backup.page.tip.title" = "Mnemonic seed phrase is the only way to restore your wallet, please keep it safe or you won't have access to your account for good.";
 "mnemonic.backup.page.tip.lab.title" = "Seed Phrase";
 "mnemonic.backup.page.tip.anewBtn.title" = "Regenerate Seed Phrase";
-"mnemonic.backup.page.tip.nextBtn.title" = "Successfully backup your seed phrase!";
+"mnemonic.backup.page.tip.nextBtn.title" = "Successfully backup your seed phrase";
 "mnemonic.backup.page.alter.title" = "It isn't a safe way to keep your seed phrase by screenshot. We suggest that you'd better write it down and keep it in a safe place.";
 "mnemonic.backup.page.alter.message" = "Regenerate seed phrase？";
 "mnemonic.backup.page.alter.cancel" = "No";
 "mnemonic.backup.page.alter.confirm" = "Yes";
 "mnemonic.backup.page.error.type.name" = "Please input account name or password";
-"mnemonic.backup.page.error.type.nameValid" = "Account name only supports Chinese and English characters as well as unserscores.";
+"mnemonic.backup.page.error.type.nameValid" = "Account name only supports Chinese and English characters as well as underscores.";
 "mnemonic.backup.page.error.type.validWalletNameCount" = "Username only supports less than 32 characters";
 "mnemonic.backup.page.error.type.difference" = "Please enter the same password!";
 "mnemonic.backup.page.switch.mode.title" = "Switch to %@ mnemonic words";
@@ -70,8 +70,8 @@
 "import.page.title" = "Please input your seed phrase";
 "import.page.submit.btn" = "Restore Account";
 "import.page.submit.invalid.mnemonic" = "Something wrong with your seed phrase, please try again!";
-"import.page.submit.loading" = "import...";
-"import.page.submit.success" = "import success";
+"import.page.submit.loading" = "Import...";
+"import.page.submit.success" = "Import success";
 "import.page.alert.exist.title" = "The seed phrase you input has already had an account name '%@' on current device, are you sure you would like to overwrite existed account";
 "import.page.alert.exist.ok" = "Confirm";
 "import.page.alert.exist.cancel" = "Cancel";
@@ -87,7 +87,7 @@
 "login.page.btn.chooseName" = "Select Accounts";
 "login.page.btn.login" = "Login";
 "login.page.loading.title" = "Processing";
-"login.page.error.toast.title" = "Wrong password! Import seed phrase instead";
+"login.page.error.toast.title" = "Wrong password! Please try to import seed phrase instead";
 
 /* Home */
 "tabbar.item.title.wallet" = "Wallet";
@@ -282,7 +282,7 @@
 "vote.list.confirm.button.title" = "Confirm";
 "vote.list.count" = "Votes";
 "vote.list.address" = "Address";
-"vote.list.send.success" = "Successfully sent vote request";
+"vote.list.send.success" = "Successfully send vote request";
 "vote.list.alert.quota" = "Unable to vote, you have to run PoW or stake VITE for TPS quota to vote";
 "vote.list.search.empty" = "No result, please try another input";
 "vote.list.search.no.transaction.before" = "You cannot vote for now as there is no transaction record in your address";
@@ -294,15 +294,15 @@
 "Vite.RefreshBackFooter.NoMoreDataText" = "No more data";
 
 //Welcome
-"introduction.page.tip1.title" = "No gas fee";
-"introduction.page.tip2.title" = "Extremely fast transactions";
-"introduction.page.tip3.title" = "HD Wallet structure";
+"introduction.page.tip1.title" = "Feeless Transactions";
+"introduction.page.tip2.title" = "Extremely Fast Transactions";
+"introduction.page.tip3.title" = "HD Wallet Structure";
 "introduction.page.tip4.title" = "Vote to collect rewards";
 "introduction.page.tip1.desc" = "Use TPS quota for payment, get free TPS quota by running PoW.";
 "introduction.page.tip2.desc" = "Designed in asynchronous architecture, so smooth to make transactions.";
 "introduction.page.tip3.desc" = "Support multiple tokens, easy to manage accounts.";
 "introduction.page.tip4.desc" = "Vote for official SBPs, acquire rewards of VITE.";
-"introduction.page.nextBtn.title" = "Start VITE journey";
+"introduction.page.nextBtn.title" = "Start VITE Journey";
 
 /* Error Message */
 "vite.error.network.error" = "Something went wrong with network, please try again later";
