--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -41,17 +41,17 @@
 "create.page.submit.btn.title" = "Create";
 
 "create.page.tip.title" = "Back up Wallet Account";
-"create.page.tip.content" = "Mnemonic seed phrase is used to restore your wallet when switching devices or deleting app, better write it down and keep it in a safe place where only you can access, otherwise your assets will be at tremendous risks";
-"create.page.tip.nextBtn" = "Backup Seed Phrase";
+"create.page.tip.content" = "Mnemonic seed phrase is the only way to restore your wallet when you switch devices or reinstall this app. You are strongly advised to write down the phrase and keep it in a safe place where only you have access.";
+"create.page.tip.nextBtn" = "Generate Seed Phrase";
 
 /* mnemonic */
-"mnemonic.backup.page.title" = "Backup Seed Phrase";
+"mnemonic.backup.page.title" = "Generate Seed Phrase";
 "mnemonic.backup.page.tip.title" = "Mnemonic seed phrase is the only way to restore your wallet, please keep it safe or you won't have access to your account for good.";
 "mnemonic.backup.page.tip.lab.title" = "Seed Phrase";
-"mnemonic.backup.page.tip.anewBtn.title" = "Regenerate Seed Phrase";
-"mnemonic.backup.page.tip.nextBtn.title" = "Successfully backup your seed phrase";
-"mnemonic.backup.page.alter.title" = "It isn't a safe way to keep your seed phrase by screenshot. We suggest that you'd better write it down and keep it in a safe place.";
-"mnemonic.backup.page.alter.message" = "Regenerate seed phrase？";
+"mnemonic.backup.page.tip.anewBtn.title" = "I want a different seed phrase";
+"mnemonic.backup.page.tip.nextBtn.title" = "Yes, I have written down my seed phrase";
+"mnemonic.backup.page.alter.title" = "We strongly advise against taking a screenshot of the seed phrase.  We suggest that you write down the seed phrase on a piece of paper and keep it in a safe place.";
+"mnemonic.backup.page.alter.message" = "Would you like to create a new seed phrase?";
 "mnemonic.backup.page.alter.cancel" = "No";
 "mnemonic.backup.page.alter.confirm" = "Yes";
 "mnemonic.backup.page.error.type.name" = "Please input account name or password";
