change my page name

--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -109,11 +109,11 @@
 "manage.wallet.page.changeName.loading" = "Editing";
 "manage.wallet.page.error.type.name" = "Wallet name can not be empty";
 
-/* my */
 "my.page.contacts.cell.title" = "联系人";
 "my.page.mnemonic.cell.title" = "助记词";
 "my.page.system.cell.title" = "使用设置";
 "my.page.aboutUs.cell.title" = "关于我们";
+"my.page.change.wallet.name.alter.title" = "修改账户名";
 
 /* Transaction List */
 "transaction.list.page.title" = "Transaction History";
