--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -115,6 +115,8 @@
 "my.page.mnemonic.cell.title" = "助记词";
 "my.page.system.cell.title" = "使用设置";
 "my.page.aboutUs.cell.title" = "关于我们";
+"my.page.change.wallet.name.alter.title" = "修改账户名";
+
 
 /* Transaction List */
 "transaction.list.page.title" = "交易记录";
