--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -143,6 +143,8 @@
 "balance.info.detail.send.button.title" = "Transfer";
 "balance.info.detail.vote" = "Vote";
 "balance.info.detail.pledge" = "Quota";
+"balance.info.detail.pledge.count.content" = "配额 %@ UTPS";
+"balance.info.detail.onroad.amount.content" = "%@ 待确认";
 
 /* Address Manage Page */
 "address.manage.page.title" = "Address Management";
