--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -146,6 +146,8 @@
 "balance.info.detail.send.button.title" = "转账";
 "balance.info.detail.vote" = "投票";
 "balance.info.detail.pledge" = "获取配额";
+"balance.info.detail.pledge.count.content" = "配额 %@ UTPS";
+"balance.info.detail.onroad.amount.content" = "%@ 待确认";
 
 /* Address Manage Page */
 "address.manage.page.title" = "地址管理";
