--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -164,7 +164,8 @@
 "send.page.my.balance.title" = "Balance";
 "send.page.my.quota.title" = "My Quota";
 "send.page.my.max.tx.count.title" = "Maximum Amount of Tx";
-"send.page.add.current.address.button.title" = "Mine";
+"send.page.add.my.address.button.title" = "Mine";
+"send.page.add.contacts.button.title" = "联系地址";
 "send.page.scan.address.button.title" = "Scan";
 "send.page.to.address.title" = "Recipient";
 "send.page.amount.title" = "Amount";
@@ -183,6 +184,7 @@
 "send.page.confirm.biometryAuthFailed.back" = "Back";
 "send.page.confirm.passwordAuthFailed.retry" = "Retry";
 "send.page.token.info.error" = "Token Info Error";
+"send.page.quota.content" = "%@ UTPS";
 
 
 /* Confirm Transaction Page */
