--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -340,3 +340,8 @@
 "eth.page.gasFee.slow.title" = "慢";
 "eth.page.gasFee.fast.title" = "快";
 
+//token
+"token.list.page.search.title" = "输入Token名称或合约地址";
+"token.list.page.section.vite.header" = "VITE网络代币";
+"token.list.page.section.eth.header" = "ETH网络代币";
+
