--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -81,7 +81,7 @@
 /* export mnemonic */
 "export.page.title" = "Export Seed Phrase";
 "export.page.alter.title" = "Please Input Password";
-"export.page.alter.tf.placeholder" = "请输入账户密码";
+"export.page.alter.tf.placeholder" = "Please input password";
 "export.page.alter.password.error" = "Wrong Password!";
 
 /* login */
@@ -100,7 +100,7 @@
 "wallet.home.toast.copy.address" = "Successfully copied!";
 "wallet.home.scan.url.alert.title" = "NOTICE";
 "wallet.home.scan.url.alert.message" = "You are going to visit a third party page which leaves Vite App. Your use on this page will abide by third party Term of User Agreement and Privacy Policy, Vite Labs has any supervision or control over the quality, content, reliability or security of the third party dApp, nor shall Vite Labs be liable for its use.";
-"wallet.home.header.title" = "全部资产";
+"wallet.home.header.title" = "Assets";
 
 /* Manage Wallet */
 "manage.wallet.page.title" = "Wallet Management";
@@ -111,11 +111,11 @@
 "manage.wallet.page.changeName.loading" = "Editing";
 "manage.wallet.page.error.type.name" = "Wallet name can not be empty";
 
-"my.page.contacts.cell.title" = "联系人";
-"my.page.mnemonic.cell.title" = "助记词";
-"my.page.system.cell.title" = "使用设置";
-"my.page.aboutUs.cell.title" = "关于我们";
-"my.page.change.wallet.name.alter.title" = "修改账户名";
+"my.page.contacts.cell.title" = "Contacts";
+"my.page.mnemonic.cell.title" = "Mnemonic Words";
+"my.page.system.cell.title" = "Settings";
+"my.page.aboutUs.cell.title" = "About Us";
+"my.page.change.wallet.name.alter.title" = "Edit Account Name";
 
 /* Transaction List */
 "transaction.list.page.title" = "Transaction History";
@@ -139,14 +139,14 @@
 /* BalanceInfo */
 "balance.info.detail.balance.title" = "Balance";
 "balance.info.detail.unconfirmed.title" = "Unreceived";
-"balance.info.detail.unconfirmed.count.title" = "%@ unconfirmed";
+"balance.info.detail.unconfirmed.count.title" = "%@ Unconfirmed";
 "balance.info.detail.show.transactions.button.title" = "View Transaction History";
 "balance.info.detail.reveice.button.title" = "Receive";
 "balance.info.detail.send.button.title" = "Transfer";
 "balance.info.detail.vote" = "Vote";
 "balance.info.detail.pledge" = "Quota";
-"balance.info.detail.pledge.count.content" = "配额 %@ UTPS";
-"balance.info.detail.onroad.amount.content" = "%@ 待确认";
+"balance.info.detail.pledge.count.content" = "Quote %@ UTPS";
+"balance.info.detail.onroad.amount.content" = "%@ Unconfirmed";
 
 /* Address Manage Page */
 "address.manage.page.title" = "Address Management";
@@ -156,9 +156,9 @@
 "address.manage.address.generate.button.toast" = "Add up to maximum 10 addresses!";
 "address.manage.tip.alert.message" = "At most 10 accounts. The first address and addresses that have transaction records will be shown when resotring account, and addresses with no record will be hidden, these can be regenerated and reused.";
 "address.manage.tip.alert.ok" = "I know";
-"address.manage.default.address.name" = "我的地址";
-"address.manage.change.name.alert.title" = "修改地址名称";
-"address.manage.change.name.alert.placeholder" = "请输入新的名称";
+"address.manage.default.address.name" = "My Address";
+"address.manage.change.name.alert.title" = "Edit Address Alias";
+"address.manage.change.name.alert.placeholder" = "Please input new alias";
 
 /* Send Page */
 "send.page.title" = "Transfer";
@@ -167,7 +167,7 @@
 "send.page.my.quota.title" = "My Quota";
 "send.page.my.max.tx.count.title" = "Maximum Amount of Tx";
 "send.page.add.my.address.button.title" = "Mine";
-"send.page.add.contacts.button.title" = "联系地址";
+"send.page.add.contacts.button.title" = "Contact Address";
 "send.page.scan.address.button.title" = "Scan";
 "send.page.to.address.title" = "Recipient";
 "send.page.amount.title" = "Amount";
@@ -198,7 +198,7 @@
 "confirm.transaction.page.confirm.button" = "Confirm";
 "confirm.transaction.page.biometry.confirm.reason" = "Verify";
 "confirm.transaction.page.use.password.title" = "Enter Password";
-"confirm.transaction.page.pw.title" = "请输入密码";
+"confirm.transaction.page.pw.title" = "Please input password";
 "confirm.transaction.page.toast.password.error" = "Wrong password!";
 "confirm.transaction.page.node.name" = "Node Name";
 "confirm.transaction.page.vote" = "Vote";
