--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -156,18 +156,18 @@
 "address.manage.address.generate.button.toast" = "Add up to maximum 10 addresses!";
 "address.manage.tip.alert.message" = "At most 10 accounts. The first address and addresses that have transaction records will be shown when resotring account, and addresses with no record will be hidden, these can be regenerated and reused.";
 "address.manage.tip.alert.ok" = "I know";
-"address.manage.default.address.name" = "My Address";
+"address.manage.default.address.name" = "My VITE Address";
 "address.manage.change.name.alert.title" = "Edit Address Alias";
 "address.manage.change.name.alert.placeholder" = "Please input new alias";
 
 /* Send Page */
 "send.page.title" = "Transfer";
-"send.page.my.address.title" = "My Address";
+"send.page.my.address.title" = "VITE Address";
 "send.page.my.balance.title" = "Balance";
-"send.page.my.quota.title" = "My Quota";
+"send.page.my.quota.title" = "Quota";
 "send.page.my.max.tx.count.title" = "Maximum Amount of Tx";
 "send.page.add.my.address.button.title" = "Mine";
-"send.page.add.contacts.button.title" = "Contact Address";
+"send.page.vite.contacts.button.title" = "VITE Contact Address";
 "send.page.scan.address.button.title" = "Scan";
 "send.page.to.address.title" = "Recipient";
 "send.page.amount.title" = "Amount";
@@ -347,7 +347,8 @@
 "vite.uri.amount.format.error" = "Wrong format with transaction amount";
 
 // eth
-"eth.send.page.my.address.title" = "My ETH Address";
+"eth.send.page.my.address.title" = "ETH Address";
+"eth.send.page.eth.contacts.button.title" = "ETH Contact Address";
 "eth.receive.page.my.address.title" = "My ETH Address";
 "eth.page.gasFee.title" = "Gas Fee";
 "eth.page.gasFee.slow.title" = "Slow";
