--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -280,7 +280,7 @@
 "peldge.title" = "我的抵押列表";
 
 /* Vote */
-"vote.page.title" = "我的投票";
+"vote.page.title" = "投票";
 "vote.page.info.nodata.title" = "暂无投票";
 "vote.page.voteStatus.voteSuccess" = "投票成功";
 "vote.page.voteStatus.voting" = "正在投票中";
